# Lab1

./: CMakeLists.txt  README.md  run.sh
data/: input.txt  output.csv
include/: vector.hpp
src/: main.cpp  vector.cpp
util/: generator.py  requirements.txt  visualizer.py
